--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -40,7 +40,6 @@
                                 </state>
                                 <connections>
                                     <action selector="stopRecord:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nsh-es-cst"/>
-                                    <segue destination="izE-IM-2ww" kind="show" identifier="stopRecording" id="kNc-6w-h5J"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -92,20 +91,20 @@
                     </view>
                     <navigationItem key="navigationItem" title="Record" id="8mh-ab-MP1"/>
                     <connections>
-                        <outlet property="recordButton" destination="zci-to-zYm" id="XhL-je-l92"/>
-                        <outlet property="recordingInProgress" destination="HcX-83-XET" id="Bbu-KM-b1d"/>
-                        <outlet property="stopButton" destination="Xm5-M5-WDS" id="CcR-Ub-UD8"/>
+                        <outlet property="recordButton" destination="zci-to-zYm" id="cUy-TX-tE9"/>
+                        <outlet property="recordingInProgress" destination="HcX-83-XET" id="n7j-nu-ExH"/>
+                        <outlet property="stopButton" destination="Xm5-M5-WDS" id="vWN-Gb-S8G"/>
+                        <segue destination="izE-IM-2ww" kind="show" identifier="stopRecording" id="PBF-pv-uer"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="976.5" y="230"/>
+            <point key="canvasLocation" x="976" y="230"/>
         </scene>
-        <!--PlaySoundsViewController-->
+        <!--PLAY-->
         <scene sceneID="Lo6-xG-yqF">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Pyd-KW-JkH" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController title="PlaySoundsViewController" id="izE-IM-2ww" customClass="PlaySoundsViewController" customModule="Pitch_Perfect" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="PLAY" id="izE-IM-2ww" customClass="PlaySoundsViewController" customModule="Pitch_Perfect" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="kes-1o-6R0"/>
                         <viewControllerLayoutGuide type="bottom" id="PMh-lD-Vuk"/>
@@ -186,13 +185,13 @@
                         </variation>
                     </view>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Pyd-KW-JkH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1741.5" y="230"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="FTU-G6-zLx">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ZIQ-Pb-8Th" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9qG-i2-kau" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="pCu-rv-G20">
@@ -204,6 +203,7 @@
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="RtP-1e-gfV"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZIQ-Pb-8Th" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="121.5" y="230"/>
         </scene>
